// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDownLink ATTRIBUTES should customize render items 1`] = `
<DropDownLink
  data={
    Array [
      "По умолчанию",
      "Цена по возрастанию",
      "Цена по убыванию",
      "Площадь по возрастанию",
      "Площадь по убыванию",
    ]
  }
  itemRender={[Function]}
  onChange={[Function]}
  value="По умолчанию"
>
  <DropDown
    isOpen={false}
    onMouseEnter={[Function]}
    theme={
      Object {
        "wrapper": "dropdown-wrapper blank button-wrapper",
      }
    }
  >
    <Wrapper
      className="dropdown-wrapper blank button-wrapper"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      <Span
        className="dropdown-wrapper blank button-wrapper"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <span
          className="dropdown-wrapper blank button-wrapper"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <Title
            className="dropdown-text alt"
            key=".0"
          >
            <A
              className="dropdown-text alt"
            >
              <a
                className="dropdown-text alt"
                onClick={[Function]}
              >
                По умолчанию
              </a>
            </A>
          </Title>
          <Ul
            default={true}
            key=".1"
          >
            <ul
              default={true}
            >
              <Component
                className="dropdown-item level-2"
                item="По умолчанию"
                itemRender={[Function]}
                key="undefined_По умолчанию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <span>
                    ---По умолчанию
                  </span>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Цена по возрастанию"
                itemRender={[Function]}
                key="undefined_Цена по возрастанию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <span>
                    ---Цена по возрастанию
                  </span>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Цена по убыванию"
                itemRender={[Function]}
                key="undefined_Цена по убыванию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <span>
                    ---Цена по убыванию
                  </span>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Площадь по возрастанию"
                itemRender={[Function]}
                key="undefined_Площадь по возрастанию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <span>
                    ---Площадь по возрастанию
                  </span>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Площадь по убыванию"
                itemRender={[Function]}
                key="undefined_Площадь по убыванию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <span>
                    ---Площадь по убыванию
                  </span>
                </Item>
              </Component>
            </ul>
          </Ul>
        </span>
      </Span>
    </Wrapper>
  </DropDown>
</DropDownLink>
`;

exports[`DropDownLink ATTRIBUTES should customize title 1`] = `
<DropDownLink
  data={
    Array [
      "По умолчанию",
      "Цена по возрастанию",
      "Цена по убыванию",
      "Площадь по возрастанию",
      "Площадь по убыванию",
    ]
  }
  onChange={[Function]}
  titleRender={[Function]}
  value="По умолчанию"
>
  <DropDown
    isOpen={false}
    onMouseEnter={[Function]}
    theme={
      Object {
        "wrapper": "dropdown-wrapper blank button-wrapper",
      }
    }
  >
    <Wrapper
      className="dropdown-wrapper blank button-wrapper"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      <Span
        className="dropdown-wrapper blank button-wrapper"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <span
          className="dropdown-wrapper blank button-wrapper"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <Title
            className="dropdown-text alt"
            key=".0"
          >
            <span>
              $$По умолчанию$$
            </span>
          </Title>
          <Ul
            default={true}
            key=".1"
          >
            <ul
              default={true}
            >
              <Component
                className="dropdown-item level-2"
                item="По умолчанию"
                key="undefined_По умолчанию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          По умолчанию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Цена по возрастанию"
                key="undefined_Цена по возрастанию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Цена по возрастанию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Цена по убыванию"
                key="undefined_Цена по убыванию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Цена по убыванию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Площадь по возрастанию"
                key="undefined_Площадь по возрастанию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Площадь по возрастанию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Площадь по убыванию"
                key="undefined_Площадь по убыванию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Площадь по убыванию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
            </ul>
          </Ul>
        </span>
      </Span>
    </Wrapper>
  </DropDown>
</DropDownLink>
`;

exports[`DropDownLink HANDLERS should change value onChange 1`] = `
<DropDownLink
  data={
    Array [
      "По умолчанию",
      "Цена по возрастанию",
      "Цена по убыванию",
      "Площадь по возрастанию",
      "Площадь по убыванию",
    ]
  }
  name="Eltsen"
  onChange={[Function]}
  titleRender={[Function]}
  value="По умолчанию"
>
  <DropDown
    onMouseEnter={[Function]}
    theme={
      Object {
        "wrapper": "dropdown-wrapper blank button-wrapper",
      }
    }
  >
    <Wrapper
      className="dropdown-wrapper blank button-wrapper"
      onMouseEnter={[Function]}
    >
      <Span
        className="dropdown-wrapper blank button-wrapper"
        onMouseEnter={[Function]}
      >
        <span
          className="dropdown-wrapper blank button-wrapper"
          onMouseEnter={[Function]}
        >
          <Title
            className="dropdown-text alt"
          >
            <span>
              $$[object Object]$$
            </span>
          </Title>
          <Ul
            default={true}
          >
            <ul
              default={true}
            >
              <Component
                className="dropdown-item level-2"
                item="По умолчанию"
                key="Eltsen_По умолчанию"
                name="Eltsen"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          По умолчанию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Цена по возрастанию"
                key="Eltsen_Цена по возрастанию"
                name="Eltsen"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Цена по возрастанию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Цена по убыванию"
                key="Eltsen_Цена по убыванию"
                name="Eltsen"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Цена по убыванию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Площадь по возрастанию"
                key="Eltsen_Площадь по возрастанию"
                name="Eltsen"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Площадь по возрастанию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Площадь по убыванию"
                key="Eltsen_Площадь по убыванию"
                name="Eltsen"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Площадь по убыванию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
            </ul>
          </Ul>
        </span>
      </Span>
    </Wrapper>
  </DropDown>
</DropDownLink>
`;

exports[`DropDownLink SNAPSHOTS should render with array string 1`] = `
<DropDownLink
  data={
    Array [
      "По умолчанию",
      "Цена по возрастанию",
      "Цена по убыванию",
      "Площадь по возрастанию",
      "Площадь по убыванию",
    ]
  }
  onChange={[Function]}
  value="По умолчанию"
>
  <DropDown
    isOpen={false}
    onMouseEnter={[Function]}
    theme={
      Object {
        "wrapper": "dropdown-wrapper blank button-wrapper",
      }
    }
  >
    <Wrapper
      className="dropdown-wrapper blank button-wrapper"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      <Span
        className="dropdown-wrapper blank button-wrapper"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <span
          className="dropdown-wrapper blank button-wrapper"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <Title
            className="dropdown-text alt"
            key=".0"
          >
            <A
              className="dropdown-text alt"
            >
              <a
                className="dropdown-text alt"
                onClick={[Function]}
              >
                По умолчанию
              </a>
            </A>
          </Title>
          <Ul
            default={true}
            key=".1"
          >
            <ul
              default={true}
            >
              <Component
                className="dropdown-item level-2"
                item="По умолчанию"
                key="undefined_По умолчанию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          По умолчанию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Цена по возрастанию"
                key="undefined_Цена по возрастанию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Цена по возрастанию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Цена по убыванию"
                key="undefined_Цена по убыванию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Цена по убыванию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Площадь по возрастанию"
                key="undefined_Площадь по возрастанию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Площадь по возрастанию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item="Площадь по убыванию"
                key="undefined_Площадь по убыванию"
                onClick={[Function]}
                textField=""
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Площадь по убыванию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
            </ul>
          </Ul>
        </span>
      </Span>
    </Wrapper>
  </DropDown>
</DropDownLink>
`;

exports[`DropDownLink SNAPSHOTS should render with data objects 1`] = `
<DropDownLink
  data={
    Array [
      Object {
        "name": "По умолчанию",
        "order": Object {
          "sortField": "createDate",
          "sortOrder": "DESC",
        },
      },
      Object {
        "name": "Цена по возрастанию",
        "order": Object {
          "sortField": "cost.commonPrice",
          "sortOrder": "ASC",
        },
      },
      Object {
        "name": "Цена по убыванию",
        "order": Object {
          "sortField": "cost.commonPrice",
          "sortOrder": "DESC",
        },
      },
      Object {
        "name": "Площадь по возрастанию",
        "order": Object {
          "sortField": "commonArea",
          "sortOrder": "ASC",
        },
      },
      Object {
        "name": "Площадь по убыванию",
        "order": Object {
          "sortField": "commonArea",
          "sortOrder": "DESC",
        },
      },
    ]
  }
  onChange={[Function]}
  textField="name"
  value={
    Object {
      "name": "Площадь по убыванию",
      "order": Object {
        "sortField": "commonArea",
        "sortOrder": "DESC",
      },
    }
  }
>
  <DropDown
    isOpen={false}
    onMouseEnter={[Function]}
    theme={
      Object {
        "wrapper": "dropdown-wrapper blank button-wrapper",
      }
    }
  >
    <Wrapper
      className="dropdown-wrapper blank button-wrapper"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      <Span
        className="dropdown-wrapper blank button-wrapper"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <span
          className="dropdown-wrapper blank button-wrapper"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <Title
            className="dropdown-text alt"
            key=".0"
          >
            <A
              className="dropdown-text alt"
            >
              <a
                className="dropdown-text alt"
                onClick={[Function]}
              >
                Площадь по убыванию
              </a>
            </A>
          </Title>
          <Ul
            default={true}
            key=".1"
          >
            <ul
              default={true}
            >
              <Component
                className="dropdown-item level-2"
                item={
                  Object {
                    "name": "По умолчанию",
                    "order": Object {
                      "sortField": "createDate",
                      "sortOrder": "DESC",
                    },
                  }
                }
                key="undefined_По умолчанию"
                onClick={[Function]}
                textField="name"
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          По умолчанию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item={
                  Object {
                    "name": "Цена по возрастанию",
                    "order": Object {
                      "sortField": "cost.commonPrice",
                      "sortOrder": "ASC",
                    },
                  }
                }
                key="undefined_Цена по возрастанию"
                onClick={[Function]}
                textField="name"
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Цена по возрастанию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item={
                  Object {
                    "name": "Цена по убыванию",
                    "order": Object {
                      "sortField": "cost.commonPrice",
                      "sortOrder": "DESC",
                    },
                  }
                }
                key="undefined_Цена по убыванию"
                onClick={[Function]}
                textField="name"
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Цена по убыванию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item={
                  Object {
                    "name": "Площадь по возрастанию",
                    "order": Object {
                      "sortField": "commonArea",
                      "sortOrder": "ASC",
                    },
                  }
                }
                key="undefined_Площадь по возрастанию"
                onClick={[Function]}
                textField="name"
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Площадь по возрастанию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
              <Component
                className="dropdown-item level-2"
                item={
                  Object {
                    "name": "Площадь по убыванию",
                    "order": Object {
                      "sortField": "commonArea",
                      "sortOrder": "DESC",
                    },
                  }
                }
                key="undefined_Площадь по убыванию"
                onClick={[Function]}
                textField="name"
              >
                <Item
                  className="dropdown-item level-2"
                  onClick={[Function]}
                >
                  <Li
                    className="dropdown-item level-2"
                    onClick={[Function]}
                  >
                    <li
                      className="dropdown-item level-2"
                      onClick={[Function]}
                    >
                      <A
                        href="#"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Площадь по убыванию
                        </a>
                      </A>
                    </li>
                  </Li>
                </Item>
              </Component>
            </ul>
          </Ul>
        </span>
      </Span>
    </Wrapper>
  </DropDown>
</DropDownLink>
`;
